cmake_minimum_required(VERSION 3.22)
project(learn)

set(CMAKE_CXX_STANDARD 14)

# add_executable(learn 20220626/learn_20220626_cout.cpp)
# add_executable(learn 20220626/learn_20220626_sentence.cpp)
# add_executable(learn 20220626/learn_20220626_003_cin.cpp)
# add_executable(learn 20220626/learn_20220626_004_sqrt.cpp)
# add_executable(learn 20220626/learn_20220626_005_self_func.cpp)

# add_executable(learn 20220629/learn_20220629_integer.cpp)
# add_executable(learn 20220629/learn_20220629_002_unsigned.cpp)

# add_executable(learn 20220702/learn_20220702_001_literal_value.cpp)
# add_executable(learn 20220702/learn_20220702_002_char.cpp)
# add_executable(learn 20220702/learn_20220702_coutput.cpp)
# add_executable(learn 20220702/learn_20220702_004_escape_character.cpp)
# add_executable(learn 20220702/learn_20220702_005_float.cpp)
# add_executable(learn 20220702/learn_20220702_006_type_change.cpp)
# add_executable(learn 20220702/learn_20220702_007_type_change_force.cpp)
# add_executable(learn 20220702/learn_20220702_008_array.cpp)
# add_executable(learn 20220702/learn_20220702_009_string.cpp)
# add_executable(learn 20220702/learn_20220702_010_cin_getline.cpp)
# add_executable(learn 20220702/learn_20220702_011_cin_get.cpp)

# add_executable(learn 20220703/learn_20220703_001_string.cpp)
# add_executable(learn 20220703/learn_20220703_002_strcpy_strcat.cpp)
# add_executable(learn 20220703/learn_20220703_003_string_io.cpp)
# add_executable(learn 20220703/learn_20220703_004_structur.cpp)
# add_executable(learn 20220703/learn_20220703_005_assgn_st.cpp)
# add_executable(learn 20220703/learn_20220703_006_arrstruc.cpp)
# add_executable(learn 20220703/learn_20220703_007_address.cpp)
# add_executable(learn 20220703/learn_20220703_008_pointer.cpp)
# add_executable(learn 20220703/learn_20220703_009_init_ptr.cpp)
# add_executable(learn 20220703/learn_20220703_010_use_new.cpp)
# add_executable(learn 20220703/learn_20220703_011_arraynew.cpp)
# add_executable(learn 20220703/learn_20220703_012_addpntrs.cpp)
# add_executable(learn 20220703/learn_20220703_013_ptrstr.cpp)
# add_executable(learn 20220703/learn_20220703_014_newstrct.cpp)
# add_executable(learn 20220703/learn_20220703_015_delete.cpp)
# add_executable(learn 20220703/learn_20220703_016_mixtypes.cpp)
# add_executable(learn 20220703/learn_20220703_017_choices.cpp)

# add_executable(learn 20220710/learn_20220710_001_forloop.cpp)
# add_executable(learn 20220710/learn_20220710_002_express.cpp)
# add_executable(learn 20220710/learn_20220710_003_formore.cpp)
# add_executable(learn 20220710/learn_20220710_004_bigstep.cpp)
# add_executable(learn 20220710/learn_20220710_005_forstr1.cpp)
# add_executable(learn 20220710/learn_20220710_006_plus_one.cpp)
# add_executable(learn 20220710/learn_20220710_007_block.cpp)
# add_executable(learn 20220710/learn_20220710_008_forstr2.cpp)
# add_executable(learn 20220710/learn_20220710_009_compstr1.cpp)
# add_executable(learn 20220710/learn_20220710_010_compstr2.cpp)
# add_executable(learn 20220710/learn_20220710_011_while.cpp)
# add_executable(learn 20220710/learn_20220710_012_waitting.cpp)
# add_executable(learn 20220710/learn_20220710_013_dowhile.cpp)
# add_executable(learn 20220710/learn_20220710_014_textin1.cpp)
# add_executable(learn 20220710/learn_20220710_015_textin3.cpp)
# add_executable(learn 20220710/learn_20220710_016_textin4.cpp)
# add_executable(learn 20220710/learn_20220710_017_nested.cpp)
# add_executable(learn 20220710/learn_20220710_018_if.cpp)
# add_executable(learn 20220710/learn_20220710_019_ifelse.cpp)
# add_executable(learn 20220710/learn_20220710_020_ifelseif.cpp)
# add_executable(learn 20220710/learn_20220710_021_or.cpp)

# add_executable(learn 20220716/learn_20220716_001_add.cpp)
# add_executable(learn 20220716/learn_20220716_002_more_add.cpp)
# add_executable(learn 20220716/learn_20220716_003_not.cpp)
# add_executable(learn 20220716/learn_20220716_004_cctyoes.cpp)
# add_executable(learn 20220716/learn_20220716_005_condit.cpp)
# add_executable(learn 20220716/learn_20220716_006_switch.cpp)
# add_executable(learn 20220716/learn_20220716_007_enum.cpp)
# add_executable(learn 20220716/learn_20220716_008_jump.cpp)
# add_executable(learn 20220716/learn_20220716_009_cinfish.cpp)
# add_executable(learn 20220716/learn_20220716_010_cingolf.cpp)
# add_executable(learn 20220716/learn_20220716_011_outfile.cpp)
# add_executable(learn 20220716/learn_20220716_012_sumafile.cpp)

# add_executable(learn 20220717/learn_20220717_001_calling.cpp)
# add_executable(learn 20220717/learn_20220717_002_protos.cpp)
# add_executable(learn 20220717/learn_20220717_003_twoarg.cpp)
# add_executable(learn 20220717/learn_20220717_004_lotto.cpp)
# add_executable(learn 20220717/learn_20220717_005_arrfun1.cpp)
# add_executable(learn 20220717/learn_20220717_006_arrfun2.cpp)
# add_executable(learn 20220717/learn_20220717_007_arrfun3.cpp)
# add_executable(learn 20220717/learn_20220717_008_airfun4.cpp)
# add_executable(learn 20220717/learn_20220717_009_strgfun.cpp)
# add_executable(learn 20220717/learn_20220717_010_strgback.cpp)
# add_executable(learn 20220717/learn_20220717_011_travel.cpp)
# add_executable(learn 20220717/learn_20220717_012_strcfun.cpp)
# add_executable(learn 20220717/learn_20220717_013_strctptr.cpp)
# add_executable(learn 20220717/learn_20220717_014_topfive.cpp)
# add_executable(learn 20220717/learn_20220717_015_arrobj.cpp)

add_executable(learn )